<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/unosNaziva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/naziv_recepta" />

    <EditText
        android:id="@+id/unosVremena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vreme_pripreme"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/cekOmiljeno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/omiljeno" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/dugmePotvrdi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/potvrdi" />

        <Button
            android:id="@+id/dugmeOtkazi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otkazi" />

    </LinearLayout>

</LinearLayout>
